# SmartFPGA_Agent_SYSC4907

./: .gitignore  CMakeLists.txt  README.md  TODO.md  apt-packages.txt  default.py  default.py.cfg  default2.py  default2.py.cfg  env.sh  environment.txt  environment.yaml  gui.py  nstest.py  nstest.py.cfg  packages.txt  pip-packages.txt  requirements.txt  simulation.py
examples/: 02-RL-demo.py
nengofpga/: nengofpga.bit  nengofpga.hwh  pes_relu_rate.bit  pes_relu_spiking.hwh
nengopy/: fpga.py  nengocpp.pyi  nengopy_test.py  neurons.py
smart_agent/: __init__.py  gui.py  model.py  model.py.cfg  shared.py  simulation.py  vars.py
src/: arena.h  default.py  default2.py  direction.h  gui.py  model.py  model.py.cfg  nengo.cpp  nengo.h  path_cache.h  path_pair.h  pathfinding.cpp  pathfinding.h  player.h  point.h  shared.py  shared_arena.h  shared_path_cache.h  shared_player.h  shared_point.h  simulation.py  vars.py
src/bindings/: nengo.cpp  shared.cpp  simulation.cpp
src/hls/: bd.tcl  pes_relu_rate.hwh  pes_relu_spiking.bit  rectified_linear.cpp  rectified_linear.h
src/lib/: gui.py  simulation.py
